# wiktionary_polyglot

./: '  pyproject.toml  tmp.py
generate_language_list/: README.md  de.csv  fr.csv
tests/: test_wiktionary_polyglot.py
wiktionary_polyglot/: edit_names.json  main.py  unnecessary_headings.json  wiktionary_list.csv
wiktionary_polyglot/language_codes_lists/: en.csv  language_codes.json
