[tool.poetry]
name = "wiktionary_polyglot"
version = "0.1.0"
description = ""
authors = ["Awes Mubarak <contact@awesmubarak.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
bs4 = "^0.0.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", ""]
build-backend = "poetry.core.masonry.api"
